<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.baidu.mapapi.map.TextureMapView
            android:id="@+id/baidu_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/origin_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/destination_button"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:typeface="monospace"
            android:text="@string/origin_button"/>
        <Button
            android:id="@+id/destination_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/send_button"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:typeface="monospace"
            android:text="@string/destination_button"/>
        <ToggleButton
            android:id="@+id/send_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:typeface="monospace"
            android:textOn="@string/togglebutton_on_text"
            android:textOff="@string/togglebutton_off_text"/>
    </RelativeLayout>
</FrameLayout>
