<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/driver_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_hint_ahead"
                android:typeface="sans"
                android:textSize="20sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/drivername_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Mr. Wang"
                android:typeface="serif"
                android:textSize="18sp"
                android:textColor="#ff6f00"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/take_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_hint_end"
                android:typeface="serif"
                android:textSize="18sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/phone_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_phonenumber_text"
                android:typeface="sans"
                android:textSize="20sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/driverphone_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18010000000"
                android:typeface="serif"
                android:textSize="18sp"
                android:textColor="#009688"
                android:gravity="center"/>
        </LinearLayout>


        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:text="@string/call_button_text"/>

    </LinearLayout>


</RelativeLayout>
