<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="打车软件用户端"
        android:textSize="30sp"
        android:fontFamily="serif"/>

    <GridLayout
        android:id="@+id/user_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:rowCount="2"
        android:columnCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_edittext"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/phonenumber_edittext"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:inputType="phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nike_name_edittext"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/nikename_edittext"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:inputType="text"/>

    </GridLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_info_layout"
        android:layout_alignRight="@+id/user_info_layout"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="sans"
        android:background="@drawable/custom_button"/>
</RelativeLayout>
